# stm32_cubemx_mcp9808

./: .gitmodules  CMakeLists.txt  Makefile
app/: CMakeLists.txt
app/mcp9808/: CMakeLists.txt  mcp9808.c  mcp9808.h  mcp9808_config.h  mcp9808_registers.h
cmake/: build.cmake  submodules.cmake
cubemx/: .mxproject  CMakeLists.txt  cubemx.ioc
cubemx/Core/Src/: main.c
cubemx/cmake/: gcc-arm-none-eabi.cmake  starm-clang.cmake
cubemx/cmake/stm32cubemx/: CMakeLists.txt
main/: CMakeLists.txt  main.c
make/: common.mk  debug.mk  linters.mk  submodules.mk
requirements/: submodules.txt
